--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "install": "^0.13.0",
     "next": "13.0.3",
+    "npm": "^9.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-phone-number-input": "^3.2.12",
     "react-redux": "^8.0.5"
   }
 }
