--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.12",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-signature-canvas": "^1.0.6"
   }
 }
