--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.0.3",
     "install": "^0.13.0",
     "next": "13.0.3",
+    "next-redux-wrapper": "^8.0.0",
     "npm": "^9.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
