--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-redux-wrapper": "^8.0.0",
     "npm": "^9.1.2",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.12",
     "react-redux": "^8.0.5",
