--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
-    "@mui/styled-engine-sc": "^5.10.6",
-    "@mui/styles": "^5.10.10",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "eslint": "8.27.0",
@@ -28,6 +26,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.12",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-signature-canvas": "^1.0.6"
   }
